# MetalCutting

./: .gitignore  CMakeLists.txt  main.cpp
src/app/: AlgorithmFactory.cpp  AlgorithmFactory.h  CuttingService.cpp  CuttingService.h  CuttingValidator.cpp  CuttingValidator.h
src/domain/algorithms/: GreedyAlgorithm.cpp  GreedyAlgorithm.h  GuillotineAlgorithm.cpp  GuillotineAlgorithm.h  ICuttingAlgorithm.h  MaxRectsAlgorithm.cpp  MaxRectsAlgorithm.h  PartExpander.cpp  PartExpander.h  PartSorter.cpp  PartSorter.h
src/domain/entities/: ExpandedPart.h  FreeRectangle.h  Part.h  Placement.h  Rectangle.h  Sheet.h
src/domain/requests/: CuttingRequest.h
src/domain/results/: CuttingResult.h
src/tests/: AlgorithmTestRunner.cpp  AlgorithmTestRunner.h  TestScenario.h  TestScenarios.cpp  TestScenarios.h
src/ui/: inputwindow.cpp  inputwindow.h  inputwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/graphics/: CuttingRenderer.cpp  CuttingRenderer.h  CuttingScene.h
